--- a/Start-IT/index.html
+++ b/Start-IT/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <p><a href="/modul-1/index.html">Modul 1</a></p>
-    <p><a href="/modul-2/index.html">Modul 2</a></p>
-    <p><a href="/modul-3/index.html">Modul 3</a></p>
+    <p><a href="Start-IT/modul-1/index.html">Modul 1</a></p>
+    <p><a href="Start-IT/modul-2/index.html">Modul 2</a></p>
+    <p><a href="Start-IT/modul-3/index.html">Modul 3</a></p>
 </body>
 
 </html>
