--- a/Start-IT/Modul-1.html
+++ b/Start-IT/Modul-1.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <p><a href="Start-IT/Modul-1/Uke 1 - CSS.html">Generelt CSS</a></p>
-    <p><a href="Start-IT/Modul-1/Uke 1 - CSS Grid.html">CSS Grid</a></p>
-    <p><a href="Start-IT/Modul-1/Uke 1 - SVG.html">Generelt SVG</a></p>
+    <p><a href="Modul-1/Uke 1 - CSS.html">Generelt CSS</a></p>
+    <p><a href="Modul-1/Uke 1 - CSS Grid.html">CSS Grid</a></p>
+    <p><a href="Modul-1/Uke 1 - SVG.html">Generelt SVG</a></p>
 </body>
 
 </html>
