--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Get Academy - Mikael Karlsen</title>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div>Start-IT</div>
+    <p><a href="Start-IT/Modul-1.html">Modul 1</a></p>
+    <p><a href="Start-IT/Modul-2.html">Modul 2</a></p>
+    <p><a href="Start-IT/Modul-3.html">Modul 3</a></p>
 </body>
+
 </html>
