--- a/Start-IT/Modul-3.html
+++ b/Start-IT/Modul-3.html
@@ -5,69 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modul 3</title>
-    <style>
-        .fade-in {
-            animation: fadeIn ease 10s;
-            -webkit-animation: fadeIn ease 10s;
-            -moz-animation: fadeIn ease 10s;
-            -o-animation: fadeIn ease 10s;
-            -ms-animation: fadeIn ease 10s;
-        }
-
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-
-        @-moz-keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-
-        @-webkit-keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-
-        @-o-keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-
-        @-ms-keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css" media="screen"/>
 </head>
 
 <body>
-    <h1>🤔</h1>
+    <h1 class="Big">🤔</h1>
     <p>Her er det ikke noe...</p>
     <p class="fade-in">enda.</p>
 </body>
