--- a/Start-IT/Modul-2.html
+++ b/Start-IT/Modul-2.html
@@ -5,65 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modul 2</title>
-    <style>
-        .fade-in {
-            animation: fadeIn ease 10s;
-            -webkit-animation: fadeIn ease 10s;
-            -moz-animation: fadeIn ease 10s;
-            -o-animation: fadeIn ease 10s;
-            -ms-animation: fadeIn ease 10s;
-        }
-
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-
-        @-moz-keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-
-        @-webkit-keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-
-        @-o-keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-
-        @-ms-keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1;
-            }
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css" media="screen"/>
 </head>
 
 <body>
