--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get Academy - Mikael Karlsen</title>
+    <title>Document</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
 </head>
-
 <body>
-	<h1>Discord tag:Sl0th#1337</h1>
-    <img src="https://cdn.discordapp.com/avatars/176761194474897408/a21852b0a1ec6711072bcbdf112be2a2.png" alt="Discord">
-    <hr>   
-    <h2>Hei!</h2>
-	<p>Mitt navn er Mikael Karlsen og jeg er 23 år. Jeg kommer fra Sande og bor akkurat nå i Sandefjord. 
-	<p>Jeg er en hobby lyddesigner og spilldesigner.</p>
-    <hr>
-    <div class="Big">Start-IT</div>
-    <p><a href="Start-IT/Modul-1.html">Modul 1 - Team 3 🦊</a></p>
-    <p><a href="Start-IT/Modul-2.html">Modul 2</a></p>
-    <p><a href="Start-IT/Modul-3.html">Modul 3</a></p>
-</body>
+    <div class="page">
+        <div class="header">
+            <img class="HeaderText" src="https://cdn.discordapp.com/avatars/176761194474897408/a21852b0a1ec6711072bcbdf112be2a2.png" alt="Discord" >
+            <p>Discord tag: Sl0th#1337</p>
+            <p><a href="https://steamcommunity.com/id/the_sl0th">Steam Community</a></p>
+        </div>
+        <div class="menu">Menu</div>
+        <div class="content">Content</div>
+        <div class="footer">Footer</div>
 
+</body>
 </html>
