--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
 <body>
     <div class="page">
         <div class="header">
-            <img class="HeaderText" src="https://cdn.discordapp.com/avatars/176761194474897408/a21852b0a1ec6711072bcbdf112be2a2.png" alt="Discord" >
-            <p>Discord tag: Sl0th#1337</p>
-            <p><a href="https://steamcommunity.com/id/the_sl0th">Steam Community</a></p>
+            <img class="HeaderImage" src="https://cdn.discordapp.com/avatars/176761194474897408/a21852b0a1ec6711072bcbdf112be2a2.png" alt="Discord" >
+            <p class="HeaderText">Discord tag: Sl0th#1337</p>
+            <p class="HeaderText"><a href="https://steamcommunity.com/id/the_sl0th">Steam Community</a></p>
         </div>
-        <div class="menu">Menu</div>
+        <div class="menu">
+            <button type="button" class="menubutton">Click Me!</button>
+            <button type="button" class="menubutton">Click Me!</button>
+            <button type="button" class="menubutton">Click Me!</button>
+            <button type="button" class="menubutton">Click Me!</button>
+            <button type="button" class="menubutton">Click Me!</button>
+            <button type="button" class="menubutton">Click Me!</button>
+            <button type="button" class="menubutton">Click Me!</button>
+        </div>
         <div class="content">Content</div>
-        <div class="footer">Footer</div>
-
+        <div class="footer">
+            <div>Her blir det tekst, enten copyright eller annet jeg kan putte in</div>
+        </div>
+    </div>
 </body>
 </html>
