--- a/Start-IT/Modul-2/Oblig/Oblig.html
+++ b/Start-IT/Modul-2/Oblig/Oblig.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CYOA Oblig Edition</title>
-    <link rel="stylesheet" href="Oblig.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <script src="model.js"></script>
     <script src="controller.js"></script>
 </head>
 
 <body>
     <div id="app"></div>
-    <script src="Oblig.js"></script>
+    <script src="view.js"></script>
 </body>
 
 </html>
