--- a/Start-IT/Modul-2/Oblig/Oblig.html
+++ b/Start-IT/Modul-2/Oblig/Oblig.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CYOA Oblig Edition</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="dist/howler.js"></script>
     <script src="model.js"></script>
     <script src="controller.js"></script>
 </head>
